--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,12 @@ edition = "2021"
 [build-dependencies]
 bindgen = "0.65.1"
 cc = {version="1.0", features=["parallel"]}
+
+[dependencies]
+uuid = {version = "1.3.1", features = ["v4", "fast-rng", "macro-diagnostics"]}
+
+[profile.release]
+lto = true          # Enable Link Time Optimization
+codegen-units = 1   # Reduce number of codegen units to increase optimizations.
+panic = 'abort'     # Abort on panic
+strip = true        # Strip symbols from binary*
